@@ -155,9 +155,7 @@ is_deeply $collection->uniq->to_array, [1, 2, 3, 4, 5], 'right result';
 is_deeply $collection->uniq->reverse->uniq->to_array, [5, 4, 3, 2, 1],
   'right result';
 
-# json
-$collection = c(1, 2, 3);
-my $bytes = encode_json $collection;
-is $bytes, '[1,2,3]', 'TO_JSON';
+# TO_JSON
+is encode_json(c(1, 2, 3)), '[1,2,3]', 'right result';
 
 done_testing();
